<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeKey</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="addContacts">Add Contacts</string>
    <string name="sample_device_admin_description"> Allow SafeKey to prevent distracted driving by 
        locking your device while you\'re driving </string>
    <string name="sample_device_admin"> SafeKey</string>
    <string name="summary_image">Choose the lock screen background</string>
    <string name="lock_text">Device operation temporarily disabled</string>
    <string name="activity_sample_device_admin"> LockScreen</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="title_activity_setup">Quick Setup</string>
    <string name="desc_main">User Picture</string>
    <string name="desc_splash">Splash Screen</string>
    <string name="contacts"><b>EMERGENCY CONTACTS</b></string>
    <string name="emergency">911</string>
    <string name="emergency1">Mom</string>
    <string name="emergency2">Home</string>
    <string name="history"><b> DRIVING HISTORY</b></string>
    <string name="next"><b> Next</b></string>
    <string name="view"><b> View</b></string>
    <string name="share"><b> Share</b></string>
    <string name="click"><b>Add emergency contacts</b></string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="help">Help</string>
    <string name="oldpwd">Enter Password</string>
    <string name="newpwd">Enter New Password</string>
    <string name="newpwd1">Enter New Password Again</string>
    <string name="edit"><b> Edit</b></string>
    <string name="delete"><b> Delete</b></string>
    <string name="title_activity_lock_screen">LockScreen</string>
    <string name="title_activity_show_dialog">ShowDialog</string>
    <string name="pref_images">Customize Lock Screen</string>
    <string name="emcall">Emergency call</string>
    <string name="title_activity_dadisabled">DADisabled</string>
    <string name="title_activity_driver_tracking">Driver Tracking</string>
    <string name="dtprompt"> View Information from</string>
    <string name="title_activity_quick_guide">Quick Guide</string>
    <string name="about"> About Safekey </string>
    <string name="faq"> FAQ </string>
    <string name="issue"> Report an issue </string>
    <string name="version"> Current Version </string>
    <string name="all">Beginning of Time</string>
    <string name="year">1 year</string>
    <string name="month">1 month</string>
    <string name="week">1 week</string>
    <string name="day">1 day</string>
    <string name="custom">Custom</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="customGraph"><b>SHOW DATA FROM:</b></string>
    <string name="desc_user_data">View Driving History</string>
    <string name="startDate"> Start Date</string>
    <string name="endDate"> End Date</string>
    

</resources>
