<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:id="@+id/rootlayout"
    >
    
    <TextView
        android:id="@+id/rgrpheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customGraph"
        android:layout_marginTop="15dp"
        android:textColor="#0099CC"
        />
	<View
	    android:id="@+id/separator1"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/rgrpheader"
	    android:layout_marginTop="7dp"
	    android:background="#0099CC"
	    android:visibility="visible" />
   
    <RadioGroup
       android:id="@+id/radiogrp"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_marginTop="5dp"
       android:layout_below="@+id/separator1"
       android:checkedButton="@+id/all" >
              
       
       <RadioButton android:id="@+id/all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:checked="true"
        />
       
    <RadioButton android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
       />
    
       <RadioButton android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
       />
       
    <RadioButton android:id="@+id/week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week"
        />
       
    	 <RadioButton android:id="@+id/custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom"
      />
       
   </RadioGroup>
   
  <View
	    android:id="@+id/separator2"
	    android:layout_width="fill_parent"
	    android:layout_height="0.4dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/radiogrp"
	    android:layout_marginTop="15dp"
	    android:background="@android:color/darker_gray"
	    android:visibility="visible" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator2"
        android:padding="3dp"
        android:text="@string/startDate"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:clickable="true"
       />
    
    <View
	    android:id="@+id/separator3"
	    android:layout_width="fill_parent"
	    android:layout_height="0.4dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/startDate"
	    android:layout_marginTop="5dp"
	    android:background="@android:color/darker_gray"
	    android:visibility="visible" />

     <TextView
         android:id="@+id/endDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/startDate"
         android:layout_alignBottom="@+id/startDate"
         android:layout_toRightOf="@+id/radiogrp"
         android:clickable="true"
         android:padding="3dp"
         android:text="@string/endDate"
         android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>