<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/oldpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/oldpwd"
        android:inputType="textPassword" >

       
    </EditText>

    <EditText
        android:id="@+id/newpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldpwd"
        android:layout_marginTop="16dp"
        android:hint="@string/newpwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newpwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newpwd"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/newpwd1"
        android:inputType="textPassword" />
   
</RelativeLayout>
