<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <TextView
        android:id="@+id/hello_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        />
	
	<TextView
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello_name"
        android:text="@string/contacts"
        android:layout_marginTop="15dp"
        android:textColor="#0099CC"
        />
	<View
	    android:id="@+id/separator1"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/contacts"
	    android:layout_marginTop="7dp"
	    android:background="#0099CC"
	    android:visibility="visible" />
	<TextView
        android:id="@+id/contacts1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator1"
        android:layout_marginTop="7dp"
        android:textStyle="bold"
        android:text="@string/emergency"
        />
	<View
	    android:id="@+id/separator2"
	    android:layout_width="fill_parent"
	    android:layout_height="0.4dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/contacts1"
	    android:layout_marginTop="5dp"
	    android:visibility="gone"
	    android:background="@android:color/darker_gray"
	     />
	<TextView
        android:id="@+id/contacts2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator2"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:textColor="@android:color/darker_gray"
        android:gravity = "center_vertical"
        android:drawableRight="@drawable/ic_dropdown"
        android:textStyle="bold"  
            
        />
	<View
	    android:id="@+id/separator3"
	    android:layout_width="fill_parent"
	    android:layout_height="0.4dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/contacts2"
	    android:layout_marginTop="5dp"
	    android:visibility="gone"
	    android:background="@android:color/darker_gray"
	     />
	<TextView
        android:id="@+id/contacts3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator3"
        android:layout_marginTop="5dp"
        android:gravity = "center_vertical"
        android:visibility="gone"
        android:textColor="@android:color/darker_gray"
        android:drawableRight="@drawable/ic_dropdown"
        android:textStyle="bold"
       
        />
	<View
	    android:id="@+id/separator4"
	    android:layout_width="fill_parent"
	    android:layout_height="0.4dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/contacts3"
	    android:layout_marginTop="5dp"
	    android:visibility="gone"
	    android:background="@android:color/darker_gray"
	     />
 	<TextView
        android:id="@+id/addcontacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator4"
        android:layout_marginTop="5dp"
        android:gravity = "center_vertical"
        android:text="@string/addContacts"
        android:visibility="gone"
        android:textColor="@android:color/darker_gray"
        android:drawableLeft="@drawable/ic_add_main"
        android:textStyle="bold"
        />
	<ImageView
	    android:id="@+id/imageView1"
	    android:layout_width="200dp"
	    android:layout_height="150dp"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:contentDescription="@string/desc_main"
	    android:clickable="true"
	    android:src="@drawable/ic_placeholder" />
	<TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addcontacts"
        android:text="@string/history"
        android:layout_marginTop="15dp"
        android:textColor="#0099CC"
        />
	<View
	    android:id="@+id/separator5"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/history"
	    android:layout_marginTop="7dp"
	    android:background="#0099CC"
	    android:visibility="visible" />
	<TextView
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator5"
        android:layout_marginTop="5dp"
        android:gravity = "center_vertical"
        android:drawableRight="@drawable/ic_next"
        android:textStyle="bold"
        android:text="@string/view"
        />
	<View
	    android:id="@+id/separator6"
	    android:layout_width="fill_parent"
	    android:layout_height="0.4dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/view"
	    android:layout_marginTop="5dp"
	    android:background="@android:color/darker_gray"
	    android:visibility="visible" />
	<TextView
        android:id="@+id/share"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator6"
        android:layout_marginTop="5dp"
        android:gravity = "center_vertical"
        android:textStyle="bold"
        android:text="@string/share"
        />

	

</RelativeLayout>