<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.safekey.LockScreen"
    tools:ignore="MergeRootFrame" 
    
    >
    
    
    <Button
        android:id="@+id/emergency2"
        android:layout_width="144dp"
        android:drawableLeft="@drawable/ic_call"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:layout_above="@+id/emergency3"
        android:textColor="#FFFFFF"
        android:alpha="0.7"
        android:visibility="gone"
        android:background="@drawable/blackbutton"
         />
	<Button
        android:id="@+id/emergency3"
        android:layout_width="144dp"
        android:drawableLeft="@drawable/ic_call"
        
        android:layout_above="@+id/emergency1"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        
        android:alpha="0.7"
        android:background="@drawable/blackbutton"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        
	    
        />
	<Button
	    android:id="@+id/emergency1"
	    android:layout_width="144dp"
	    android:drawableLeft="@drawable/ic_call"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="15dp"
	    android:alpha="0.7"
	    android:layout_alignParentBottom="true"	    
	    android:background="@drawable/blackbutton"
	    android:text="@string/emergency"
	    android:textColor="#FFFFFF" 
	    android:visibility="invisible" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_centerVertical="true"
	    android:alpha="0.7"
	  	android:gravity="center_vertical"
	    android:textSize="15sp"
	    android:drawableLeft="@drawable/ic_alert"
	    android:background="@drawable/blackbutton"
	    android:text="@string/lock_text"
	    android:textColor="#FFFFFF"
	    />

	<TextView
	    android:id="@+id/emCall"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/textView1"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_centerHorizontal="true"
	    android:alpha="0.7"
	    android:textSize="15sp"
	    android:gravity="center_vertical"
	    android:background="@drawable/blackbutton"
	    android:drawableLeft="@drawable/ic_call"
	  
	   android:text="@string/emcall"
	   android:textColor="#FFFFFF"
	    />

</RelativeLayout>

