<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Setup" >
    
    <View
	    android:id="@+id/separator"
	    android:layout_width="fill_parent"
	    android:layout_height="0.4dp"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/add_contacts"
	    android:layout_marginTop="5dp"
	    android:background="@android:color/darker_gray"
	    android:visibility="visible" />

    <TextView
        android:id="@+id/contact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:layout_below="@+id/separator"
        android:drawableRight="@drawable/ic_cancel"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/contact2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact1"
        android:clickable="true"
        android:drawableRight="@drawable/ic_cancel"
    	android:visibility="invisible"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/add_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/separator"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/separator"
        android:layout_marginTop="61dp"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_add"
        android:gravity="center_horizontal"
        android:text="@string/click"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contact2"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:text="@string/skip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/contact2"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:clickable="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/finish"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

</RelativeLayout>
